# DemoEngine

./: .gitignore  CMakeLists.txt  README.md  Report.md  todo.txt
DemoEngineGUI/: App.xaml  App.xaml.cs  DemoEngineGUI.sln  MainWindow.xaml  MainWindow.xaml.cs
src/: main.cpp
src/Debug/: FileHandler.cpp  FileHandler.h
src/Events/: Events.cpp  Events.h
src/Game/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Level.cpp  Level.h  Object.cpp  Object.h  Player.cpp
src/Physic/: Collider.cpp  Collider.h  Collision.cpp  Collision.h  CollisionSolver.cpp  CollisionSolver.h  Map.cpp  Map.h  Новый текстовый документ.txt
src/Render/: Window.cpp  Window.h
src/Render/Graphic/: Camera.cpp  Camera.h  LightPoint.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ObjLoader.cpp  ObjLoader.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  Vertex.h
src/Render/Resources/Models/: test.mtl
src/Render/Resources/Models/Spaceship/: spaceship.mtl
src/Render/Resources/Models/dingus/: test_model.mtl
src/Render/Resources/Models/spacecraft/: untitled.mtl
src/Render/Resources/Models/spacecraft/source/: spaceship2_withmat_ch.blend  spaceship2_withmat_ch.blend1
src/Render/Resources/Models/test_cube/: test_cube.mtl
src/Render/Resources/Models/test_enemy/: test_enemy.mtl
src/Render/Resources/Shaders/: cube.glslf  cube.glslv  figure_texture.glslf  figure_texture.glslv  skybox_shader.glslv
src/Render/Resources/Skyboxes/Space/: all.psd
src/Render/Templates/: triangle.glslf  triangle.glslv
